test/fail/import/trailing_slash.lily
#[
SyntaxError: Import path cannot end with '/'.
    from trailing_slash.lily:6:
]#

import hello/
